fix: ProdutoDAO